--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhpiGL+CC/gwwZWUmiOHKs",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPAYQai/WD08fK8reCYJReg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -2293,11 +2295,120 @@
         "#tokenizer.push_to_hub(\"user_name/qwen3_14b_reasoning_chat_lora, token = HF_TOKEN\")\n",
         "\n",
         "#To load these adapters later:\n",
-        "#model , tokenizer = FastLanguageModel.from_pretrained(model_name = \"user_name/qwen3_14b_reasoning_chat_lora\" , load_in_4bit = True)\n",
-        "\n"
+        "#model , tokenizer = FastLanguageModel.from_pretrained(model_name = \"user_name/qwen3_14b_reasoning_chat_lora\" , load_in_4bit = True)"
       ],
       "metadata": {
         "id": "701Mlv5il9N4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "!pip install --upgrade --force-reinstall --no-cache-dir --no-deps unsloth unsloth_zoo\n",
+        "!pip install torch\n",
+        "!pip install vllm\n",
+        "!pip install xformers\n",
+        "!pip install xgrammar\n",
+        "!pip install --force--reinstall --no-cache-dir --no-deps git+https://github.com/unslothai/unssloth.git\n",
+        "!pip install trl"
+      ],
+      "metadata": {
+        "id": "yIbiHwV2u8Ki"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth import FastLanguageModel\n",
+        "import torch\n",
+        "\n",
+        "max_sequence_length = 2048\n",
+        "dtype = None\n",
+        "load_in_4bit = True\n",
+        "\n",
+        "model , tokenizer = FastLanguageModel.from_pretrained(\n",
+        "    model_name = \"unsloth/DeepSeek-R1-Distill-Llama-88\",\n",
+        "    max_seq_length = max_sequence_length,\n",
+        "    load_in_4bit = load_in_4bit,\n",
+        "    fast_inference = True\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "GWMhGFfQwQkk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth.chat_templates import get_chat_template\n",
+        "tokenizer = get_chat_template(tokenizer,chat_template = \"llama-3.2\")\n",
+        "tokenizer.pad_token = tokenizer.eos_token\n",
+        "FastLanguageModel.for_inference(model)\n",
+        "\n",
+        "messages = [{\"role\":\"user\", \"content\":\"I am very happy as I have cracked Alberson offer today and Blend 360 offer today\"}]\n",
+        "inputs = tokenizer.apply_chat_template(\n",
+        "    messages,\n",
+        "    tokenize = True,\n",
+        "    add_generation_prompt = True,\n",
+        "    enable_thinking = True,\n",
+        "    return_tensors = \"pt\",\n",
+        "    padding = True,\n",
+        "    truncation = True,\n",
+        "    max_length = 2048\n",
+        ").to(\"cuda\")\n",
+        "\n",
+        "attention_mask = inputs !=tokenizer.pad_token_id\n",
+        "\n",
+        "outputs = model.generate(\n",
+        "    input_ids = inputs,\n",
+        "    attention_mask = attention_mask,\n",
+        "    max_new_tokens = 256,\n",
+        "    use_cache = True,\n",
+        "    temperature = 0.6,\n",
+        "    min_p = 0.1\n",
+        ")\n",
+        "text = tokenizer.decode(outputs[0],skip_special_tokens = True)\n",
+        "print(text)"
+      ],
+      "metadata": {
+        "id": "mLLwBmPCw6c6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = FastLanguageModel.get_peft_model(\n",
+        "    model,\n",
+        "    r=16,\n",
+        "    target_modules = [\n",
+        "        \"q_proj\",\n",
+        "        \"k_proj\",\n",
+        "        \"v_proj\",\n",
+        "        \"o_proj\",\n",
+        "        \"gate_proj\",\n",
+        "        \"u_proj\",\n",
+        "        \"down_proj\"\n",
+        "    ],\n",
+        "    bias= \"none\",\n",
+        "    use_gradient_checkpointing = \"unsloth\",\n",
+        "    random_state = 3407,\n",
+        "    lora_alpha = 16,\n",
+        "    lora_dropout = 0,\n",
+        "    use_rslora = False,\n",
+        "    loftq_config = None,\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "_RveTWj3zo6h"
       },
       "execution_count": null,
       "outputs": []
