--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMQiWKMbZPpRSGWbGYG4fIY",
+      "authorship_tag": "ABX9TyPbjGi+lD4Ly6uNg00Dj+C8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2318,7 +2318,7 @@
       "metadata": {
         "id": "yIbiHwV2u8Ki"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2341,25 +2341,10 @@
         ")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GWMhGFfQwQkk",
-        "outputId": "8c07a3d5-47ad-4e92-8e8f-095190a15e29"
+        "id": "GWMhGFfQwQkk"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "INFO 12-03 06:22:56 [gpu_worker.py:359] Available KV cache memory: 0.96 GiB\n",
-            "INFO 12-03 06:22:57 [kv_cache_utils.py:1229] GPU KV cache size: 7,872 tokens\n",
-            "INFO 12-03 06:22:57 [kv_cache_utils.py:1234] Maximum concurrency for 2,048 tokens per request: 3.84x\n",
-            "INFO 12-03 06:22:57 [kernel_warmup.py:65] Warming up FlashInfer attention.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2467,15 +2452,159 @@
         "    chat_template = \"llama-3.2\"\n",
         ")\n",
         "def formatting_prompts_func(examples):\n",
-        "  convos = examples(\"conversations\")\n",
+        "  convos = examples[\"conversations\"]\n",
         "  texts = [tokenizer.apply_chat_template(convo,tokenize= False , add_generation_prompt =False) for convo in convos]\n",
         "  return{\"text\":texts}\n",
         "dataset = dataset.map(formatting_prompts_func,batched=True)\n",
         "print(dataset[0][\"conversations\"])\n",
-        "print(dataset[0][\"text\"])\n"
+        "print(dataset[0][\"text\"])"
       ],
       "metadata": {
         "id": "OccRtV_-2u0O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#start model training\n",
+        "from trl import SFTTrainer , SFTConfig\n",
+        "from transformers import TrainingArguments , DataCollatorForSeq2Seq\n",
+        "from unsloth import is_bfloat16_supported\n",
+        "\n",
+        "#defining training configuration\n",
+        "trainer = SFTTrainer(\n",
+        "    model = model,\n",
+        "    tokenizer = tokenizer,\n",
+        "    train_dataset = dataset,\n",
+        "    dataset_text_field = \"text\",\n",
+        "    max_seq_length = 2048,\n",
+        "    data_collator = DataCollatorForSeq2Seq(tokenizer = tokenizer,padding = True),\n",
+        "    dataset_num_proc = 2,\n",
+        "    packing = False,\n",
+        "    args = TrainingArguments(\n",
+        "        per_device_train_batch_size = 2, #number of examples per GPU batch\n",
+        "        gradient_accumulation_steps = 4, #EBS = 2*4 = 8\n",
+        "        warmup_steps = 5, #number of warmup steps\n",
+        "        max_steps =0,\n",
+        "        learning_rate = 2e-4,\n",
+        "        num_train_epochs = 1,\n",
+        "        bf16 = is_bfloat16_supported(),\n",
+        "        logging_steps = 1,\n",
+        "        output_dir = \"outputs\",\n",
+        "        report_to = \"wandb\",\n",
+        "        optim = \"adamw_8bit\",\n",
+        "        lr_scheduler_type = \"cosine\",\n",
+        "        save_strategy = \"epoch\",\n",
+        "        ),\n",
+        ")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vWJ_2oOY5I4f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from trl import SFTTrainer , SFTConfig\n",
+        "from transformers import TrainingArguments , DataCollatorForSeq2Seq\n",
+        "from unsloth import is_bfloat16_supported\n",
+        "\n",
+        "# Custom formatting function to apply train_on_responses_only logic\n",
+        "def custom_formatting_func(examples):\n",
+        "    # Tokenize the text field\n",
+        "    # We expect examples[\"text\"] to be a list of strings\n",
+        "    tokenized_inputs = tokenizer(\n",
+        "        examples[\"text\"],\n",
+        "        padding=\"max_length\", # Or 'longest' if DataCollator handles it\n",
+        "        truncation=True,\n",
+        "        max_length=2048, # Ensure this matches the model's max_seq_length\n",
+        "        return_tensors=\"pt\"\n",
+        "    )\n",
+        "\n",
+        "    input_ids = tokenized_inputs[\"input_ids\"]\n",
+        "    attention_mask = tokenized_inputs[\"attention_mask\"]\n",
+        "    labels = input_ids.clone()\n",
+        "\n",
+        "    # Define the start sequence for the assistant's response\n",
+        "    # This should match the chat template's structure for an assistant's turn\n",
+        "    response_start_string = \"<|start_header_id|>assistant<|end_header_id|>\\n\\n\"\n",
+        "    response_start_tokens_ids = tokenizer.encode(\n",
+        "        response_start_string,\n",
+        "        add_special_tokens=False,\n",
+        "        return_tensors=\"pt\"\n",
+        "    ).squeeze(0) # Get as a 1D tensor of token IDs\n",
+        "\n",
+        "    # Apply masking logic\n",
+        "    for i in range(labels.shape[0]): # Iterate over each example in the batch\n",
+        "        current_input_ids = input_ids[i]\n",
+        "\n",
+        "        # Find the index where the assistant's response starts\n",
+        "        # Convert tensor to list for simple sequence search\n",
+        "        current_input_ids_list = current_input_ids.tolist()\n",
+        "        response_start_tokens_list = response_start_tokens_ids.tolist()\n",
+        "\n",
+        "        start_index = -1\n",
+        "        for j in range(len(current_input_ids_list) - len(response_start_tokens_list) + 1):\n",
+        "            if current_input_ids_list[j:j + len(response_start_tokens_list)] == response_start_tokens_list:\n",
+        "                start_index = j + len(response_start_tokens_list)\n",
+        "                break\n",
+        "\n",
+        "        if start_index != -1:\n",
+        "            # Mask out tokens before the assistant's response\n",
+        "            labels[i, :start_index] = -100\n",
+        "        else:\n",
+        "            # If assistant's response start marker not found, mask all tokens for this example\n",
+        "            # This indicates an issue with the template or data\n",
+        "            labels[i, :] = -100\n",
+        "\n",
+        "        # Mask padding tokens in labels\n",
+        "        labels[i, labels[i] == tokenizer.pad_token_id] = -100\n",
+        "\n",
+        "    return {\n",
+        "        \"input_ids\": input_ids,\n",
+        "        \"attention_mask\": attention_mask,\n",
+        "        \"labels\": labels, # Return as a tensor\n",
+        "    }\n",
+        "\n",
+        "#defining training configuration\n",
+        "trainer = SFTTrainer(\n",
+        "    model = model,\n",
+        "    tokenizer = tokenizer,\n",
+        "    train_dataset = dataset,\n",
+        "    formatting_func = custom_formatting_func, # Use the custom formatting function\n",
+        "    # dataset_text_field = \"text\", # When using formatting_func, dataset_text_field is not used for tokenization\n",
+        "    max_seq_length = 2048,\n",
+        "    data_collator = DataCollatorForSeq2Seq(tokenizer=tokenizer, padding=True), # Data collator for sequence to sequence tasks\n",
+        "    dataset_num_proc = 2,\n",
+        "    packing = False,\n",
+        "    args = TrainingArguments(\n",
+        "        per_device_train_batch_size = 2, #number of examples per GPU batch\n",
+        "        gradient_accumulation_steps = 4, #EBS = 2*4 = 8\n",
+        "        warmup_steps = 5, #number of warmup steps\n",
+        "        max_steps =0,\n",
+        "        learning_rate = 2e-4,\n",
+        "        num_train_epochs = 1,\n",
+        "        bf16 = is_bfloat16_supported(),\n",
+        "        logging_steps = 1,\n",
+        "        output_dir = \"outputs\",\n",
+        "        report_to = \"wandb\",\n",
+        "        optim = \"adamw_8bit\",\n",
+        "        lr_scheduler_type = \"cosine\",\n",
+        "        save_strategy = \"epoch\",\n",
+        "        ),\n",
+        ")\n",
+        "\n",
+        "# Start training\n",
+        "trainer_stats = trainer.train()\n"
+      ],
+      "metadata": {
+        "id": "eu4bBYg97ujp"
       },
       "execution_count": null,
       "outputs": []
