--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPbjGi+lD4Ly6uNg00Dj+C8",
+      "authorship_tag": "ABX9TyPB3lucrFbTT7SqLfxFzaA6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2605,6 +2605,34 @@
       ],
       "metadata": {
         "id": "eu4bBYg97ujp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#inference\n",
+        "tokenizer = get_chat_template(tokenizer,chat_template = \"llama-3.2\")\n",
+        "tokenizer.pad_token = tokenizer.eos_token\n",
+        "FastLanguageModel.for_inference(model)\n",
+        "messages = [{\"role\":\"user\", \"content\":\"I am mentally very strong\"}]\n",
+        "inputs = tokenizer.apply_chat_template(messages,tokenize = True,add_generation_prompt = True,enable_thinking = True,return_tensors = \"pt\").to(\"cuda\")\n",
+        "attention_mask = inputs !=tokenizer.pad_token_id\n",
+        "outputs = model.generate(\n",
+        "    input_ids = inputs,\n",
+        "    attention_mask = attention_mask,\n",
+        "    max_new_tokens = 256,\n",
+        "    use_cache = True,\n",
+        "    temperature = 0.6,\n",
+        "    min_p = 0.1\n",
+        ")\n",
+        "#decode\n",
+        "text = tokenizer.decode(outputs[0],skip_special_tokens = True)\n",
+        "print(text)"
+      ],
+      "metadata": {
+        "id": "tva18TRzABjT"
       },
       "execution_count": null,
       "outputs": []
