--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPB3lucrFbTT7SqLfxFzaA6",
+      "authorship_tag": "ABX9TyP/JzL6kbHV25vUmuVHSo2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2634,6 +2634,198 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#RLVR coding\n",
+        "!pip install transformers torch  trl\n",
+        "!pip install unsloth # Ensure unsloth is installed\n",
+        "!pip install datasets\n",
+        "!pip install verifiers"
+      ],
+      "metadata": {
+        "id": "aUSlZ-It7b5c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import verifiers as vf\n",
+        "from datasets import load_dataset\n",
+        "\n",
+        "from transformers import AutoTokenizer , AutoModelForCausalLM\n",
+        "#from unsloth import FastLanguageModel\n",
+        "from trl import GRPOTrainer\n",
+        "\n",
+        "#model = FastLanguageModel.from_pretrained(\"\")\n",
+        "#funciton to define enviornment\n",
+        "def load_environment(\n",
+        " num_train_examples: int = -1,\n",
+        " num_eval_examples: int = -1,\n",
+        " random_seed: int = 42,\n",
+        ")->vf:\n",
+        "  \"\"\"\n",
+        "  defines and returns the PII Masking Environment\n",
+        "  \"\"\"\n",
+        "  ### System Prompt ###\n",
+        "  system_prompt = \"\"\"Replace all personally identifiable data (PII) in the text with PII tags.PII includes: names , dates , phone numbers ,\n",
+        "  SSN , account numbers, addresses, and any other identifying information.\n",
+        "\n",
+        "  Examples:\n",
+        "  Input: Ticket Reservation for Florille: 'one ticket for Madame on October 8th , 1990\n",
+        "  Output: Ticket Reservation for [PII]: 'one ticket for [PII] on [PII]\n",
+        "\n",
+        "  Input: User Account Recovery: 'Hi Arjind Komla your Account number is 123456'\n",
+        "  Output: User Account Recovery: 'Hi [PII] your Account number is [PII]'\n",
+        "\n",
+        "  Return: ONLY the masked text wrapped in masked_output  XML Tags\n",
+        "  <masked_output>\n",
+        "  {Your masked output text here}\n",
+        "  </masked_ouput>\"\"\"\n",
+        "\n",
+        "  #load dataset\n",
+        "  ds_load = load_dataset(\"AdamLucek/open-pii-masking-en-us-30k\")\n",
+        "  dataset = ds_load[\"train\"]\n",
+        "  #Limit Training Examples if specified\n",
+        "  if num_train_examples != -1:\n",
+        "    dataset = dataset.select(range(min(num_train_examples,len(dataset))))\n",
+        "  #Calculate eval size\n",
+        "  #Default to 20% of train dataset\n",
+        "  if num_eval_examples != -1:\n",
+        "    test_size = min(num_eval_examples,max(1,len(dataset)-1))\n",
+        "  else:\n",
+        "    test_size = 0.2\n",
+        "\n",
+        "  #split dataset\n",
+        "  split = dataset.train_test_split(test_size = test_size,seed = random_seed, shuffle = True)\n",
+        "  #select the dataset\n",
+        "  train_dataset = split[\"train\"]\n",
+        "  eval_dataset = split[\"test\"]\n",
+        "\n",
+        "  #verifier library expects dataset in below format\n",
+        "\n",
+        "  {\n",
+        "      \"question\":str, #the prompt text as a string\n",
+        "      \"answer\":str, #ground truth as answer\n",
+        "      \"info\":dict, # Additional metadata\n",
+        "      \"task\":str # Identifier\n",
+        "\n",
+        "  }\n",
+        "\n",
+        "  parser = vf.XMLParser(fields=[\"reasoning\",\"answer\"], answer_field = \"answer\")\n",
+        "  #input XML text\n",
+        "  xml_text = \"\"\"\n",
+        "  <reasoning>\n",
+        "  Let me solve this step by step.\n",
+        "  First, I need to  calculate 2+2.\n",
+        "  That squals 4.\n",
+        "  </reasoning>\n",
+        "  <answer>\n",
+        "  4\n",
+        "  </answer>\n",
+        "  \"\"\"\n",
+        "  result = parser.parse(xml_text)\n",
+        "  print(result.answer)\n",
+        "\n",
+        "  #parser\n",
+        "  parser = vf.XMLParser(fields = [\"masked_output\"], answer_field = \"masked_output\")\n",
+        "\n",
+        "  ### Reward Functions ###\n",
+        "  format_reward = parser.get_format_reward_func()\n",
+        "\n",
+        "  #Accuracy - Exact Match Reward Function\n",
+        "  def exact_match_reward(parser,completion,answer) ->float:\n",
+        "    parsed_answer = parser.parse_answer(completion) or \"\"\n",
+        "    return 1.0 if parsed_answer.strip() == answer.strip() else 0.0\n",
+        "\n",
+        "  #Format Reward\n",
+        "  format_reward = parser.get_format_reward_func()\n",
+        "\n",
+        "  #PII Count Reward function\n",
+        "  def pii_count_reward(parser, completion , info) ->float:\n",
+        "    parsed_answer = parser.parse_answer(completion) or \"\"\n",
+        "    expected_count = info.get(\"pii_count\")\n",
+        "    actual_count = parsed_answer.count(\"[pii]\")\n",
+        "    return 1.0 if actual_count == expected_count else 0.0\n",
+        "\n",
+        "  #==== Rubric =====#\n",
+        "  rubric = vf.Rubric(\n",
+        "      parser = parser,\n",
+        "      funcs =[\n",
+        "        exact_match_reward,\n",
+        "        pii_count_reward,\n",
+        "        format_reward\n",
+        "      ],\n",
+        "      weights = [1.0,0.5,0.1]\n",
+        "  )\n",
+        "\n",
+        "  # ==== Define Environment ==== #\n",
+        "  vf_env = vf.SingleTurnEnv(\n",
+        "      dataset = dataset,\n",
+        "      eval_dataset = eval_dataset,\n",
+        "      system_prompt = system_prompt,\n",
+        "      rubric = rubric,\n",
+        "      parser = parser,\n",
+        "  )\n",
+        "\n",
+        "  #return enviornment\n",
+        "  return vf_env"
+      ],
+      "metadata": {
+        "id": "D6YJWeKB8q4F"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install tinker\n",
+        "!pip install -e\n",
+        "!pip install tinker_cookbook_.recipes.verifiers_rl.train"
+      ],
+      "metadata": {
+        "id": "3SzXYuvAfzQ4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Training the model\n",
+        "python -m tinker_cookbook_.recipes.verifiers_rl.train \\\n",
+        "  vf_env_id = pii-masking \\\n",
+        "  vf_env_args='{\"num_train_examples\": -1}' \\\n",
+        "  model_name = \"Qwen/Qwen3-4B-Instruct-2507\" \\\n",
+        "  lora_rank = 32 \\\n",
+        "  groups_per_batch= 32 \\\n",
+        "  group_size = 8 \\\n",
+        "  learning_rate = 1e-5 \\\n",
+        "  max_tokens = 512"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        },
+        "id": "67ISCceGdNo5",
+        "outputId": "569d7fae-afa1-4454-8316-30f05e2d1ee6"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-725135242.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-725135242.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    python -m tinker_cookbook_.recipes.verifiers_rl.train \\\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     }
   ]
 }
