--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/JzL6kbHV25vUmuVHSo2q",
+      "authorship_tag": "ABX9TyNvNQgceTT0vuikV971siu9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2777,7 +2777,7 @@
       "metadata": {
         "id": "D6YJWeKB8q4F"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2797,7 +2797,7 @@
       "cell_type": "code",
       "source": [
         "#Training the model\n",
-        "python -m tinker_cookbook_.recipes.verifiers_rl.train \\\n",
+        "uv run python -m tinker_cookbook_.recipes.verifiers_rl.train \\\n",
         "  vf_env_id = pii-masking \\\n",
         "  vf_env_args='{\"num_train_examples\": -1}' \\\n",
         "  model_name = \"Qwen/Qwen3-4B-Instruct-2507\" \\\n",
@@ -2808,24 +2808,10 @@
         "  max_tokens = 512"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 109
-        },
-        "id": "67ISCceGdNo5",
-        "outputId": "569d7fae-afa1-4454-8316-30f05e2d1ee6"
+        "id": "67ISCceGdNo5"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (ipython-input-725135242.py, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-725135242.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    python -m tinker_cookbook_.recipes.verifiers_rl.train \\\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
