--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQRybXsn9cPPVxBxJa0lHP",
+      "authorship_tag": "ABX9TyNTge+G6cs/oUI5P44htXpD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -688,6 +688,136 @@
       ],
       "metadata": {
         "id": "eWCSCcYKdW6T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MOE CODE AGAIN ON 12/19"
+      ],
+      "metadata": {
+        "id": "D5YW_Q7n4wrY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.nn import functional as F\n",
+        "torch.random.seed = 42\n",
+        "#optional"
+      ],
+      "metadata": {
+        "id": "fXrGA61yKzff"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/AviSoori1x/makeMoE/main/input.txt"
+      ],
+      "metadata": {
+        "id": "uyEnouPPLxnu",
+        "outputId": "7949dcf2-af35-46a5-9738-2bdd7bd7e0e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-12-19 10:39:47--  https://raw.githubusercontent.com/AviSoori1x/makeMoE/main/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1115394 (1.1M) [text/plain]\n",
+            "Saving to: ‘input.txt’\n",
+            "\n",
+            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2025-12-19 10:39:48 (30.5 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#creating a NN for each expert\n",
+        "class Expert(nn.Module):\n",
+        "  def __init__(self,n_embd):\n",
+        "    super().__init__()\n",
+        "    self.net = nn.Sequential(\n",
+        "        nn.Linear(n_embd,4*n_embd),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(4*n_embd,n_embd),\n",
+        "        nn.Dropout(dropout),\n",
+        "    )\n",
+        "  def forward(self,x):\n",
+        "    return self.net(x)"
+      ],
+      "metadata": {
+        "id": "mKUo0F8zMCaJ"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Understanding how gating works\n",
+        "num_experts = 3\n",
+        "top_k = 2\n",
+        "n_embed = 8\n",
+        "\n",
+        "#output from MHA goes into MOE\n",
+        "mh_output = torch.randn(1,4,n_embed) #example input [B,#no of tokens,dimension of each token]\n",
+        "topkgate_linear = nn.Linear(n_embed,num_experts) #nn.Linear(32,4)\n",
+        "logits = topkgate_linear(mh_output)\n",
+        "print(logits)"
+      ],
+      "metadata": {
+        "id": "0GofYCh7NFFN",
+        "outputId": "c555e149-4085-4bdc-f3c0-fdbdaaad8550",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[ 0.0744, -0.2427, -0.8046],\n",
+            "         [-0.1777,  1.2548, -0.5926],\n",
+            "         [ 0.1088, -1.0489,  0.2733],\n",
+            "         [ 0.1085, -0.8484, -0.0060]],\n",
+            "\n",
+            "        [[ 0.1889, -0.2092, -0.3238],\n",
+            "         [ 0.1582,  0.1181,  0.2599],\n",
+            "         [-0.3236,  0.6862,  0.4476],\n",
+            "         [ 0.3789, -0.2654, -0.2985]]], grad_fn=<ViewBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "chk_BL8MMqAY"
       },
       "execution_count": null,
       "outputs": []
