--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTge+G6cs/oUI5P44htXpD",
+      "authorship_tag": "ABX9TyP1KvetcQLImMXa3rgzGYDh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -709,14 +709,29 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.nn import functional as F\n",
-        "torch.random.seed = 42\n",
+        "torch.manual_seed(42)\n",
         "#optional"
       ],
       "metadata": {
-        "id": "fXrGA61yKzff"
+        "id": "fXrGA61yKzff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "22545ef5-855c-4662-ce51-b28dd055ec24"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x7d10f555f490>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -725,27 +740,27 @@
       ],
       "metadata": {
         "id": "uyEnouPPLxnu",
-        "outputId": "7949dcf2-af35-46a5-9738-2bdd7bd7e0e2",
+        "outputId": "71126807-6baa-42aa-954e-4b98e41bba4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-12-19 10:39:47--  https://raw.githubusercontent.com/AviSoori1x/makeMoE/main/input.txt\n",
+            "--2025-12-19 11:30:13--  https://raw.githubusercontent.com/AviSoori1x/makeMoE/main/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
-            "Saving to: ‘input.txt’\n",
+            "Saving to: ‘input.txt.1’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
+            "input.txt.1         100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2025-12-19 10:39:48 (30.5 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2025-12-19 11:30:13 (32.0 MB/s) - ‘input.txt.1’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -770,7 +785,7 @@
       "metadata": {
         "id": "mKUo0F8zMCaJ"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -783,41 +798,95 @@
         "\n",
         "#output from MHA goes into MOE\n",
         "mh_output = torch.randn(1,4,n_embed) #example input [B,#no of tokens,dimension of each token]\n",
-        "topkgate_linear = nn.Linear(n_embed,num_experts) #nn.Linear(32,4)\n",
-        "logits = topkgate_linear(mh_output)\n",
+        "topkgate_linear = nn.Linear(n_embed,num_experts) #[embedding_dimension , #no of experts] . Linear Layer y = a*xT + b\n",
+        "logits = topkgate_linear(mh_output) #mh_output is the input to the linear layer and what it returns is a matirx of size mh_output * num_experts\n",
         "print(logits)"
       ],
       "metadata": {
         "id": "0GofYCh7NFFN",
-        "outputId": "c555e149-4085-4bdc-f3c0-fdbdaaad8550",
+        "outputId": "fb2b7cac-da0a-45d2-c1dc-f28c2bed3b8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[[ 0.0744, -0.2427, -0.8046],\n",
-            "         [-0.1777,  1.2548, -0.5926],\n",
-            "         [ 0.1088, -1.0489,  0.2733],\n",
-            "         [ 0.1085, -0.8484, -0.0060]],\n",
-            "\n",
-            "        [[ 0.1889, -0.2092, -0.3238],\n",
-            "         [ 0.1582,  0.1181,  0.2599],\n",
-            "         [-0.3236,  0.6862,  0.4476],\n",
-            "         [ 0.3789, -0.2654, -0.2985]]], grad_fn=<ViewBackward0>)\n"
+            "tensor([[[ 0.0238, -0.2771, -0.5070],\n",
+            "         [-0.5727, -0.9081,  0.1839],\n",
+            "         [ 0.8137,  0.1781,  1.5661],\n",
+            "         [ 0.6523,  0.4525,  0.0062]]], grad_fn=<ViewBackward0>)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "#implement the top-k load balancing\n",
+        "#from every row we will select two experts to do that we would have to get the value from the logits matrix but before that we need to convert to prob\n",
+        "top_k_logits, indices = logits.topk(top_k,dim=-1) #get top 2 expert\n",
+        "top_k_logits , indices"
+      ],
+      "metadata": {
+        "id": "chk_BL8MMqAY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cbe2378-4d13-4c1a-db56-8434997c8ce4"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[ 0.0238, -0.2771],\n",
+              "          [ 0.1839, -0.5727],\n",
+              "          [ 1.5661,  0.8137],\n",
+              "          [ 0.6523,  0.4525]]], grad_fn=<TopkBackward0>),\n",
+              " tensor([[[0, 1],\n",
+              "          [2, 0],\n",
+              "          [2, 0],\n",
+              "          [0, 1]]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#create a class for TopKRouting\n",
+        "class TopKRouter(nn.Module):\n",
+        "  super(TopKRouter,self).__init__()\n",
+        "  self.top_k = top_k\n",
+        "  self.linear = nn.Linear(n_embed,num_experts)\n",
+        "\n",
+        "  def forward(self,mh_output): #mh_output is the output tensor of MHA\n",
+        "    logits = self.linear(mh_output) #get logits from the output\n",
+        "    top_k_logits, indices = logits.topk(self.top_k,dim=-1) #get top k logits\n",
+        "    zeros = torch.full_like(logits,float('-inf')) #fill the logits matrix with infinity\n",
+        "    sparse_logits = zeros.scatter(-1,indices,top_k_logits) #get sparse logits across last index\n",
+        "    router_output = F.softmax(sparse_logits,dim=-1) # take a softmax of the sparse logits along last dimension\n",
+        "    return router_output , indices\n"
+      ],
+      "metadata": {
+        "id": "IlzSQn3VZSip"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "chk_BL8MMqAY"
+        "id": "_TuXUqZ3ZSr0"
       },
       "execution_count": null,
       "outputs": []
